presentation data fixed dispaly and z-index issues

--- a/stylus/global-data.styl
+++ b/stylus/global-data.styl
@@ -68,27 +68,43 @@
        opacity 0
        .slide-one
         position absolute
-        top 0
+        top -10px
         left 60px
         opacity 1
+        display none
+        z-index 111
       .slide-two
         position absolute
-        top 0
+        top -10px
         left 60px
         opacity 0
+        display none
+        z-index 111
       .slide-three
         position absolute
         top 0
         left 60px
         opacity 0
+        z-index 111
+        display none
       .slide-four
         position absolute
         top 0
         left 60px
         opacity 0
+        z-index 111
+        display none
+      .slide-five
+        position absolute
+        top 0
+        left 60px
+        opacity 0
+        z-index 111
+        display none
      .questions
        font-size 30px
        font-weight 300
+       cursor pointer
      .go-button
        background decors
        width 100%
